--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <audio controls>
+        <source src="./x13əhram - Dözmüyəcəm.mp3" type="audio/mpeg">
+      </audio>
 
     <div class="container">
         <h1>Array-e elave et</h1>
-        <input type="text" id="array" placeholder="Metin daxil edin!"  >
+        <input type="text" id="array" placeholder="Metin daxil edin!" required >
+
         <p id="by"></p>
-        <button onclick="app()">Elave et</button>
+       
+        <button onclick="app()" type="submit">Elave et</button>
        
     </div>
         <script src="./app.js"></script>  
